[package]
name = "dht"
version = "0.1.0"
edition = "2021"

[build-dependencies]
protobuf-codegen = "3.5.1"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.16", features = ["derive"] }
crc = "3.2.1"
log = "0.4.22"
log4rs = "1.3.0"
mini-moka = "0.10.3"
protobuf = "3.5.1"
rand = "0.8"

[dev-dependencies]
ctor = "0.2.8"
ntest = "0.9.3"
lazy_static = "1.5.0"

[[bin]]
name = "client"
path = "src/client.rs"
